--- a/resources/views/documentos/turnos/create.twig
+++ b/resources/views/documentos/turnos/create.twig
@@ -1,40 +1,46 @@
 {% extends 'layoutForm.twig' %}
 {% block title %}
   <div class="header-irac">
-    <a  href="#!" class="active">Asignar</a>
-    <a href="/SIA/juridico/turnos/documentos/{{ id }}">Asignar Documentos</a>
-    <a href="/SIA/juridico/turnos/documentos/send/{{ id }}">Documentos Recibidos</a>
+    <a  href="#!" class="active">Nueva Asignacion</a>
+    <a href="/SIA/juridico/turnos/documentos/{{ id }}">Anexar Documentos</a>
+    <a href="/SIA/juridico/turnos/documentos/send/{{ id }}">Historial</a>
   </div>
 {% endblock %}
-  {% block btnHeader %}
-      <button class="btn btn-primary btn-sm" id="turnar">Asignar</button>
-{% endblock %}
-{% block form %}
-    <form id="irac"   data-ruta="Irac">
-            <input type="hidden" value="{{ id }}" id="idVolante">
-       <div class="table-turnos form-group">
-           <table class="table" id="turnadoJuridico">
-               <thead>
-                   <th>Nombre</th>
-                   <th>Estado</th>
-                   <th>Prioridad</th>
-                   <th>Fecha</th>
-               </thead>
-               <tbody>
-                 {% for turno in turnos %}
-                    <tr data-id="{{ turno.idTurnadoJuridico}}">
-                      <td>{{ turno.saludo }} {{turno.nombre}} {{ turno.paterno }}  {{ turno.materno }}</td>
-                      <td>{{ turno.idEstadoTurnado }}</td>
-                      <td>{{ turno.idTipoPrioridad }}</td>
-                      <td>{{ turno.fAlta }}</td>
-                    </tr>
-                 {% endfor %}
 
-               </tbody>
-           </table>
-       </div>
+{% block form %}
+
+    <form id="create_turno"   data-ruta="turnos" method="POST">
+      <input type="hidden" value="{{ id }}" id="idVolante" name="idVolante">
+      <div class="form-group">
+        <label>Enviar A: </label>
+        <select name="idUsrReceptor" class="form-control" required>
+          <option value="">Seleccione una Opcion</option>
+          {% for persona in personas %}
+            <option value="{{ persona.idPuestoJuridico }}">
+              {{ persona.saludo }} {{ persona.nombre }} {{ persona.paterno }} {{ persona.materno }}
+            </option>
+          {% endfor %}
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label>Prioridad</label>
+        <select class="form-control" name="idTipoPrioridad" required>
+          <option value="">Seleccione una Opcion</option>
+          <option value="NORMAL">Normal</option>
+          <option value="URGENTE">Urgente</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+          <label>Comentario</label>
+          <textarea placeholder="Comentario" class="form-control" name="comentario"></textarea>
+      </div>
+       <div class="form-group send">
+            <input class="btn btn-primary btn-sm" type="submit" value="Guardar"/>
+            <button class="btn btn-danger btn-sm" id="cancelar">Cancelar</button>
+      </div>
+
     </form>
-   <div class="alert alert-danger" id="errors">
-     
-   </div>
+   {% include 'errors.twig' %}
 {% endblock %}
