--- a/resources/views/documentos/turnos/index.twig
+++ b/resources/views/documentos/turnos/index.twig
@@ -22,7 +22,7 @@
                 <td>{{ turno.saludo }} {{ u.nombre }} {{ turno.paterno }} {{ turno.materno }} </td>
                 <td>{{ turno.fAlta }}</td>
                 <td>{{ turno.idTipoPrioridad }}</td>
-                <td>{{ turno.comenario }}</td>
+                <td>{{ turno.comentario }}</td>
                
 
 
