--- a/resources/views/layoutForm.twig
+++ b/resources/views/layoutForm.twig
@@ -109,5 +109,6 @@
 
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="/SIA/jur/public/js/main.js"></script>
+  <script src="/SIA/jur/public/js/menu.js"></script>
 </body>
 </html>
