--- a/resources/views/layoutTable.twig
+++ b/resources/views/layoutTable.twig
@@ -111,5 +111,6 @@
 
   
   <script src="/SIA/jur/public/js/main.js"></script>
+  <script src="/SIA/jur/public/js/menu.js"></script>
 </body>
 </html>
