--- a/resources/views/documentos/turnos/index.twig
+++ b/resources/views/documentos/turnos/index.twig
@@ -6,24 +6,36 @@
 
 {% block table %}
     <table class="table table-hover " id="main-table-turnados" data-ruta="Irac">
-        <thead>
+         <thead>
         <th class="hidden">id</th>
+        <th>Folio</th>
         <th>Documento</th>
-        <th>Remitente</th>
-        <th>Fecha Turnado</th>
-        <th>Prioridad</th>
-        <th>Comentario</th>
+        
+        <th>Asunto</th>
+      
+        <th>Auditoria</th>
+        <th>Desfazado</th>
+        <th>Estado</th>
+
         </thead>
-        {% for turno in turnos %}
+       {% for irac in iracs %}
             <tr data-ruta="Irac">
 
-                <td class="hidden">{{ turno.idTurnadoJuridico }}</td>
-                <td>{{ turno.documento }}</td>
-                <td>{{ turno.saludo }} {{ u.nombre }} {{ turno.paterno }} {{ turno.materno }} </td>
-                <td>{{ turno.fAlta }}</td>
-                <td>{{ turno.idTipoPrioridad }}</td>
-                <td>{{ turno.comentario }}</td>
+                <td class="hidden">{{ irac.idVolante }}</td>
+                <td>{{ irac.folio }}</td>
+                <td>{{ irac.numDocumento }}</td>
                
+               
+                <td>{{ irac.asunto }}</td>
+               
+                <td>{{ irac.clave }}</td>
+                <td>{{ irac.extemporaneo }}</td>
+                {% if irac.estadoProceso == 'CERRADO' %}
+                    <td class="cerrado">{{ irac.estadoProceso }}</td>
+                {% else %}
+                    <td>{{ irac.estadoProceso }}</td>
+                {% endif %}
+
 
 
             </tr>
